# ekf-nav-pipeline

./: CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  NOTICE  README.md  run.sh
data/2011_09_26/2011_09_26_drive_0013_gps_loss/oxts/data/: 0000000020.txt  0000000021.txt  0000000022.txt  0000000023.txt  0000000024.txt  0000000025.txt  0000000026.txt  0000000027.txt  0000000028.txt  0000000029.txt  0000000030.txt  0000000031.txt  0000000032.txt  0000000033.txt  0000000034.txt  0000000035.txt  0000000036.txt  0000000037.txt  0000000038.txt  0000000039.txt  0000000040.txt  0000000070.txt  0000000071.txt  0000000072.txt  0000000073.txt  0000000074.txt  0000000075.txt  0000000076.txt  0000000077.txt  0000000078.txt  0000000079.txt  0000000080.txt  0000000081.txt  0000000082.txt  0000000083.txt  0000000084.txt  0000000085.txt  0000000086.txt  0000000087.txt  0000000088.txt  (+2 more)
data/2011_10_03/2011_10_03_drive_0042_unsync/oxts/data/: 0000000000.txt  0000000001.txt  0000000003.txt  0000000004.txt  0000000005.txt  0000000006.txt  0000000007.txt  0000000009.txt  0000000012.txt  0000000013.txt  0000000015.txt  0000000017.txt  0000000018.txt  0000000021.txt  0000000022.txt  0000000023.txt  0000000025.txt  0000000026.txt  0000000027.txt  0000000029.txt  0000000032.txt  0000000035.txt  0000000036.txt  0000000037.txt  0000000038.txt  0000000043.txt  0000000045.txt  0000000046.txt  0000000048.txt  0000000049.txt  0000000051.txt  0000000057.txt  0000000058.txt  0000000059.txt  0000000062.txt  0000000064.txt  0000000065.txt  0000000067.txt  0000000068.txt  0000000069.txt  (+8677 more)
data/2011_10_03/2011_10_03_drive_0042_unsync_gps_loss/oxts/data/: 0000000002.txt  0000000008.txt  0000000010.txt  0000000011.txt  0000000014.txt  0000000016.txt  0000000019.txt  0000000020.txt  0000000024.txt  0000000028.txt  0000000030.txt  0000000031.txt  0000000033.txt  0000000034.txt  0000000039.txt  0000000040.txt  0000000041.txt  0000000042.txt  0000000044.txt  0000000047.txt  0000000052.txt  0000000053.txt  0000000054.txt  0000000055.txt  0000000056.txt  0000000061.txt  0000000063.txt  0000000066.txt  0000000070.txt  0000000073.txt  0000000074.txt  0000000075.txt  0000000079.txt  0000000082.txt  0000000085.txt  0000000087.txt  0000000091.txt  0000000095.txt  0000000097.txt  0000000098.txt  (+9268 more)
dependencies/: pullDependencies.cmake
include/: csv_logger.hpp  ekf_basic.hpp  ekf_interfaces.hpp  ekf_processor.hpp  oxts_parser.hpp  oxts_types.hpp
include/ekf/: ekf_interface.hpp  ekf_processor.hpp  ekf_vehicleModel.hpp
include/gui/: gui_plotter.hpp  road_map.hpp
include/utils/: csv_logger.hpp  oxts_parser.hpp  oxts_types.hpp  timestamp_parser.hpp  utm_converter.hpp
results/2011_10_03_drive_0042_unsync/: log.md
scripts/: ekf.py  plot.py  roads.json  set_gps_nan.py
src/: csv_logger.cpp  ekf_basic.cpp  ekf_processor.cpp  main.cpp  oxts_parser.cpp
src/ekf/: ekf_processor.cpp  ekf_vehicleModel.cpp
src/gui/: UTMConverter.cpp  gui_plotter.cpp  road_map.cpp
src/utils/: oxts_parser.cpp  utm_converter.cpp
